# ella

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  build.rs  docker-compose.yml  go.mod  go.sum  shell.nix
.github/workflows/: docker-publish.yml
libprom2json/: .gitignore  README.md  main.go
src/: cli.rs  ella_metrics.rs  family.rs  lib.rs  main.rs  metric_client.rs  metric_endpoint.rs  metric_parser.rs  utils.rs
tests/data/: example.prom  example01.json  metric-huge.json  metric-huge.prom  node_metrics.prom  smaller-example.txt
