[package]
name = "ella"
version = "0.0.1"
edition = "2021"

[build-dependencies]
bindgen = { version="0.69.4" }

[dependencies]
clap = { version = "4.5.4", features = ["env", "derive"] }
log = "0.4.21"
log4rs = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }
libc = "0.2.153"
rocket = { version = "0.5.0", features = ["json", "serde_json"] }
rocket_prometheus = "0.10.0"
humantime = "2.1.0"
reqwest = { version = "0.12.3", features = ["json"] }
tokio = "1.37.0"
futures = "0.3.30"
serde_json = "1.0.115"
once_cell = "1.19.0"
